// RoleType.java
package com.example.democode3.core.enums;

public enum RoleType {

    USER,

    MODERATOR,

    CREATOR,

    ADMIN
}