package com.example.identity_servive.enums;

public enum Difficulty {
    EASY,
    MEDIUM,
    HARD
}
