package com.example.identity_servive.enums;

public enum IsCompleted {
    TRUE,
    FALSE,
}
