package com.example.identity_servive.enums;

public enum IsLocked {
    TRUE_LOCKED,
    FALSE_LOCKED
}
