package com.example.identity_servive.enums;

public enum LessonType {
    LEARN,
    PRACTICE,
}
