package com.example.identity_servive.enums;

public enum Status {
    ACTIVE,
    OFFLINE,
    ERROR,
    SUCCESS,
    IN_PROGRESS,
    IS_COMPLETE
}
